# graphorrhea

./: .gitignore  Dockerfile  README.rst  alembic.ini  development.ini  development.toml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.cfg  snowpack.config.js  testing.ini  testing.toml
docs/: conf.py  frontmatter.rst  index.rst
docs/graphorrhea/: design.rst  index.rst
lib/graphorrhea/: __init__.py  openapi.yaml  pshell.py  resources.py  routes.py  security.py
lib/graphorrhea/models/: _meta.py  note.py  user.py
lib/graphorrhea/scripts/: create_user.py
lib/graphorrhea/views/: __init__.py  auth.py  note.py  notebook.py
migrations/: env.py
migrations/versions/: e06e4fe69c92_initial_migration.py
src/acidfs/: __init__.py  exceptions.py  mixins.py  typing.py
src/frontmatter/: __init__.py
src/graphorrhea/: __init__.py  cors.py  interfaces.py  openapi.yaml  resources.py  routes.py  security.py  traverser.py  views.py
src/graphorrhea/models/: __init__.py  _meta.py  user.py
src/graphorrhea/models/types/: __init__.py  password.py
src/graphorrhea/openapi/: __init__.py  openapi.yaml  views.py
src/graphorrhea/openapi/views/: __init__.py
src/graphorrhea/scripts/: create_user.py
src/graphorrhea/views/: __init__.py  auth.py  files.py
src/graphorrhea_frontend/: _graphorrhea.js  context.js  fetch.js  graphorrhea.js  main.js  main.module.css  path.js
src/graphorrhea_frontend/components/: editor.js  editor.module.css  form.module.css  login.js  nav.js  nav.module.css  register.js
src/graphorrhea_frontend/components/browser/: breadcrumbs.js  breadcrumbs.module.css  main.js  table.js
src/graphorrhea_frontend/hooks/: useAPI.js  useFetch.js  useLocalStorage.js  useStore.js
src/plaster_toml/: __init__.py  expand_references.py  interpolate.py  mixins.py  schemas.py
src/pyramid_autowire/: __init__.py  dependency_injection.py
src/pyramid_di/: __init__.py
tests/: conftest.py  test_graphorrhea.py
tests/acidfs/: test_file.py
tests/frontmatter/: test_loading.py
tests/graphorrhea/: test_openapi.py  test_security.py  test_views.py
tests/pyramid_autowire/: conftest.py  test_adapters.py  test_utilities.py
tests/pyramid_di/: conftest.py  test_utilities.py
