[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Nick Beeuwsaert"},
    {name = "Nick Beeuwsaert"}
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "PyYAML<6.0.0,>=5.4.1",
    "pyramid<3.0,>=2.0",
    "pyramid-jinja2<3.0,>=2.8",
    "pyramid-openapi3<1.0,>=0.13",
    "pyramid-retry<3.0.0,>=2.1.1",
    "pyramid-tm<3.0,>=2.4",
    "waitress<2.0.0,>=1.4.4",
    "acidfs<2.0,>=1.0",
    "docutils<1.0,>=0.16",
    "sqlalchemy<2.0.0,>=1.4.0",
    "zope.sqlalchemy<2.0,>=1.3",
    "passlib<2.0.0,>=1.7.4",
    "plaster<2.0,>=1.0",
    "toml<1.0.0,>=0.10.2",
    "colander<2.0.0,>=1.8.3",
    "zope.interface<6.0.0,>=5.3.0",
    "PyJWT<3.0.0,>=2.1.0",
    "PyYAML<6.0.0,>=5.4.1",
    "pyramid<3.0,>=2.0",
    "pyramid-jinja2<3.0,>=2.8",
    "pyramid-openapi3<1.0,>=0.13",
    "pyramid-retry<3.0.0,>=2.1.1",
    "pyramid-tm<3.0,>=2.4",
    "waitress<2.0.0,>=1.4.4",
    "acidfs<2.0,>=1.0",
    "docutils<1.0,>=0.16",
    "sqlalchemy<2.0.0,>=1.4.0",
    "zope.sqlalchemy<2.0,>=1.3",
    "passlib<2.0.0,>=1.7.4",
    "plaster<2.0,>=1.0",
    "toml<1.0.0,>=0.10.2",
    "colander<2.0.0,>=1.8.3",
    "zope.interface<6.0.0,>=5.3.0",
    "PyJWT<3.0.0,>=2.1.0",
    "pygit2>=1.10.0",
]
name = "graphorrhea"
version = "0.1.0"
description = ""

[project.urls]

[project.entry-points]
[project.entry-points."plaster.loader_factory"]
"file+toml" = "plaster_toml:Loader"

[project.entry-points."plaster.wsgi_loader_factory"]
"file+toml" = "plaster_toml:Loader"
[project.scripts]
graphorrhea_create_user = "graphorrhea.scripts.create_user:main"


[tool.isort]
known_first_party = [
    "graphorrhea",
    "frontmatter",
    "plaster_toml"
]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest<6.0,>=5.2",
    "pytest-testmon<2.0.0,>=1.0.3",
    "pytest-cov<3.0.0,>=2.11.1",
    "WebTest<3.0.0,>=2.0.35",
    "black<21.0,>=20.8b1",
    "pydocstyle<6.0.0,>=5.1.1",
    "flake8<4.0.0,>=3.8.4",
    "mypy<1.0,>=0.812",
    "pyramid-debugtoolbar<5.0,>=4.9",
    "alembic<2.0.0,>=1.5.7",
    "Sphinx<4.0.0,>=3.5.2",
]

[tool.pdm.build]
includes = ["src/frontmatter", "src/graphorrhea", "src/plaster_toml"]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
